Fixed Logo Alignment

--- a/style.css
+++ b/style.css
@@ -3,8 +3,18 @@
   padding: 0;
   box-sizing: border-box;
   line-height: 1.6em;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
 }
 
 html {
@@ -33,6 +43,7 @@ a {
   --punch-accent: hsl(180, 100%, 16%);
   --pink-accent: #ef96c1;
   --blue-accent: #77caf2;
+  --frame: 4px solid #4ab7b6;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -59,7 +70,9 @@ a {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-variation-settings: "wdth" 100, "GRAD" 0;
+  font-variation-settings:
+    "wdth" 100,
+    "GRAD" 0;
 }
 
 .slab {
@@ -149,27 +162,40 @@ body {
 
 .header {
   grid-template-columns: 1rem 2fr 1fr 1rem;
-  grid-template-rows: 0.6rem 1.3rem auto 1rem 2rem;
+  grid-template-rows: 0.6rem 1.5rem auto 1rem 2rem;
   width: 100%;
   background-color: #008b8b;
   box-shadow: 0 0 2rem rgba(0, 28, 28, 0.3) inset;
 }
 
 .nav {
-  position: relative;
   grid-column: 2/4;
   grid-row-start: 2;
-  height: 2.6rem;
-  display: flex;
-  flex-flow: row nowrap;
+  display: grid;
+  grid-template-columns: 1rem 1fr 4.4rem 1fr 1rem;
+  grid-template-rows: calc(1rem + 4px) 1.5rem auto;
   justify-content: center;
 }
 
 .logo-container {
   display: grid;
-  grid-template-columns: 2.6rem;
-  grid-template-rows: 2.6rem;
   place-items: center;
+  grid-column: 3/4;
+  grid-row: 1/3;
+}
+
+.frame-left {
+  grid-column: 1/3;
+  grid-row-start: 2;
+  height: 4px;
+  background-color: var(--green-accent);
+}
+
+.frame-right {
+  grid-column: 4/6;
+  grid-row-start: 2;
+  height: 4px;
+  background-color: var(--green-accent);
 }
 
 .mf-logo {
@@ -184,13 +210,20 @@ body {
   height: 2.6rem;
 }
 
+.mf-logo svg path {
+  fill: var(--green-accent);
+  fill-opacity: 1;
+}
+
 .svg-shape {
   width: 100%;
   height: auto;
 }
 
 .outline {
-  border: 4px solid var(--green-accent);
+  border-left: var(--frame);
+  border-right: var(--frame);
+  border-bottom: var(--frame);
   grid-column: 2/4;
   grid-row: 3/5;
 }
@@ -499,7 +532,7 @@ p.quote {
 @media (min-width: 768px) {
   .header {
     grid-template-columns: 2rem 2fr 1fr 2rem;
-    grid-template-rows: 1rem 1.3rem auto 5rem 6rem;
+    grid-template-rows: 1rem 1.5rem auto 5rem 6rem;
     box-shadow: 0 0 4rem rgba(0, 28, 28, 0.6) inset;
   }
 
